dataset/local/tf_lambda_url_auth/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-url-auth-type
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-url-auth-type
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-url-auth-type
    kind: Plan
    resources:
      - bad-plan
    result: fail
